# exp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: CLAUDE_CODE_SETUP.md  MULTI_AGENT_WORKFLOW.md  PROJECT_PLAN.md
src/agents/: query_agent.py  supervisor_agent.py
src/agents/tools/: __init__.py  analysis.py  bigquery.py  query.py
src/cli/: interactive.py  main.py
src/sessions/: __init__.py  manager.py  storage.py
src/utils/: config.py  models.py
tests/unit/sessions/: test_manager.py  test_storage.py
tests/unit/utils/: test_config.py
